test/expected/declare_mo_arrow_i.out
declare -> as member operator returning int
                                        ^
41: error: operator -> must return a pointer to struct, union, or class
